fix(testcomm): break line when is too long #30

--- a/app/static/styles/testcomm.css
+++ b/app/static/styles/testcomm.css
@@ -25,3 +25,8 @@ fieldset.p-2 {
 .table td:first-child {
     width: auto;
 }
+
+td {
+	max-width: 150px;
+	word-wrap: break-word;
+}
